changes to use ExecCommand and ExecResult